k8s/aircraft-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aircraft-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aircraft-service
  template:
    metadata:
      labels:
        app: aircraft-service
    spec:
      containers:
        - name: aircraft-service
          image: airline-aircraft:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8040
---
apiVersion: v1
kind: Service
metadata:
  name: aircraft-service
spec:
  selector:
    app: aircraft-service
  ports:
    - protocol: TCP
      port: 8040
      targetPort: 8040
