k8s/flight-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
        - name: flight-service
          image: airline-flight:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  selector:
    app: flight-service
  ports:
    - protocol: TCP
      port: 8020
      targetPort: 8020
